Fix sticky mobile alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3735,6 +3735,11 @@ header {
     .nav-bar.sticky .top-bar-right {
       position: relative;
       top: 13px; } }
+  @media screen and (max-width: 39.9375em) {
+    .nav-bar.sticky .columns {
+      padding-top: 1.1em; }
+    .nav-bar.sticky .centered-logo {
+      top: 10px; } }
 
 .nav-bar .icon-telephone {
   color: #5ec26a;
